[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Lapdev <team@lap.dev>"]
license = "AGPL-3.0"
description = "Self-Hosted Remote Dev Environment"

[package]
name = "lapdev"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[[bin]]
name = "lapdev-ws"
path = "lapdev-ws/src/main.rs"

[[bin]]
name = "lapdev-guest-agent"
path = "lapdev-guest-agent/src/main.rs"

[[bin]]
name = "lapdev-db"
path = "lapdev-db/src/main.rs"

[dependencies]
tokio.workspace = true
lapdev-api.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
sea-orm-migration.workspace = true
lapdev-db.workspace = true
lapdev-ws.workspace = true
lapdev-guest-agent.workspace = true
lapdev-kube.workspace = true

[workspace]
members = [
  "lapdev-api",
  "lapdev-conductor",
  "lapdev-ws",
  "lapdev-rpc",
  "lapdev-kube",
  "lapdev-dashboard",
  "lapdev-db",
  "lapdev-common",
  "lapdev-enterprise",
  "lapdev-proxy-ssh",
  "lapdev-proxy-http",
  "lapdev-guest-agent",
]

[workspace.dependencies]
rust_decimal = "1.36.0"
toml = "0.8.11"
clap = { version = "4.5.2", features = ["derive"] }
tempfile = "3.8.1"
zstd = "0.13.0"
tar = "0.4.40"
git2 = { version = "0.18.2", features = ["vendored-libgit2", "vendored-openssl"] }
anyhow = "1.0.66"
thiserror = "1.0.58"
async-trait = "0.1.74"
serde = "1.0.190"
pasetors = "0.6.8"
futures = "0.3"
futures-util = "0.3"
serde_yaml = "0.9.30"
serde_json = "1.0.111"
json5 = "0.4.1"
itertools = "0.12.0"
base64 = "0.22.0"
oauth2 = "4.2.3"
include_dir = "0.7.3"
reqwest = {version = "0.11.26", default-features = false, features = ["rustls", "stream", "json"] }
async-compression = { version = "0.4.6", features = ["tokio", "zstd"] }
docker-compose-types = "0.7.0"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4.31", features = ["serde"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tokio-tungstenite = "0.26.1"
data-encoding = "2.4.0"
sha2 = "0.10.8"
rand = "0.8.5"
strum = "0.26.1"
strum_macros = "0.26.1"
procfs = "0.17.0"
base16ct = { version = "0.2.0", features = ["alloc"] }
axum = { version = "0.7.4", features = ["ws"] }
axum-extra = { version = "0.9.2", features = ["typed-header"] }
axum-client-ip = "0.5.0"
bytes = "1.5.0"
hyper = { version = "1.2.0", features = ["server", "client", "http1", "http2"] }
hyper-util = { version = "0.1.2", features = ["tokio", "client-legacy", "server", "server-auto"] }
http-body-util = "0.1.1"
tarpc = { version = "0.34.0", features = ["full"] }
rustls-webpki = "0.102.2"
rustls-pemfile = "2.1.0"
tokio-rustls = "0.25.0"
tokio-util = "0.7.10"
tokio = { version = "1.36.0", features = ["full"] }
sqlx = { version = "0.7.3", default-features = false, features = ["sqlx-postgres"] }
sea-orm = { version = "0.12.12", features = [ "sqlx-postgres", "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
sea-orm-migration = { version = "0.12.6", features = [ "sqlx-postgres", "runtime-tokio-rustls" ] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
russh = {version = "0.50.2" }
lapdev-api = { path = "./lapdev-api" }
lapdev-ws = { path = "./lapdev-ws" }
lapdev-db = { path = "./lapdev-db" }
lapdev-rpc = { path = "./lapdev-rpc" }
lapdev-conductor = { path = "./lapdev-conductor" }
lapdev-proxy-ssh = { path = "./lapdev-proxy-ssh" }
lapdev-proxy-http = { path = "./lapdev-proxy-http" }
lapdev-common = { path = "./lapdev-common" }
lapdev-enterprise = { path = "./lapdev-enterprise" }
lapdev-guest-agent = { path = "./lapdev-guest-agent" }
lapdev-kube = { path = "./lapdev-kube" }

[package.metadata.deb]
depends = "$auto, passwd"
maintainer-scripts = "pkg/deb/"
systemd-units = { unit-name = "lapdev", enable = false }
assets = [
    ["target/release/lapdev", "/usr/bin/lapdev", "755"],
    ["pkg/common/lapdev.service.preset", "/lib/systemd/system-preset/50-lapdev.preset", "644"],
]

[package.metadata.generate-rpm]
post_install_script = "pkg/rpm/lapdev.postinst"
post_uninstall_script = "pkg/rpm/lapdev.postuninst"
assets = [
    { source = "target/release/lapdev", dest = "/usr/bin/lapdev", mode = "755" },
    { source = "pkg/deb/lapdev.service", dest = "/lib/systemd/system/lapdev.service", mode = "644" },
    { source = "pkg/common/lapdev.service.preset", dest = "/lib/systemd/system-preset/50-lapdev.preset", mode = "644" },
]
