[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Lapdev <team@lap.dev>"]
license = "AGPL-3.0"
description = "Self-Hosted Remote Dev Environment"

[package]
name = "lapdev"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[[bin]]
name = "lapdev-ws"
path = "crates/ws/src/main.rs"

[[bin]]
name = "lapdev-guest-agent"
path = "crates/guest-agent/src/main.rs"

[[bin]]
name = "lapdev-kube-manager"
path = "crates/kube-manager/src/main.rs"

[dependencies]
tokio.workspace = true
lapdev-api.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
tracing-journald.workspace = true
sea-orm-cli.workspace = true
lapdev-db.workspace = true
lapdev-ws.workspace = true
lapdev-cli.workspace = true
lapdev-guest-agent.workspace = true
lapdev-kube.workspace = true
lapdev-kube-manager.workspace = true
dotenvy.workspace = true

[workspace]
members = [
  "crates/api",
  "crates/api-hrpc",
  "crates/cli",
  "crates/conductor",
  "crates/ws",
  "crates/rpc",
  "crates/kube",
  "crates/kube-rpc",
  "crates/kube-manager",
  "crates/kube-sidecar-proxy",
  "crates/dashboard",
  "crates/db",
  "crates/db/migration",
  "crates/db/entities",
  "crates/common",
  "crates/enterprise",
  "crates/proxy-ssh",
  "crates/proxy-http",
  "crates/guest-agent",
  "crates/hrpc",
  "crates/hrpc-proc-macro",
  "crates/devbox-rpc",
  "crates/tunnel",
]

[workspace.dependencies]
rust_decimal = "1.37.1"
toml = "0.8.11"
dotenvy = "0.15.7"
clap = { version = "4.5.2", features = ["derive"] }
tempfile = "3.8.1"
zstd = "0.13.0"
tar = "0.4.40"
regex = "1.11.1"
git2 = { version = "0.18.2", features = [
  "vendored-libgit2",
  "vendored-openssl",
] }
anyhow = "1.0.66"
thiserror = "1.0.58"
async-trait = "0.1.74"
serde = { version = "1.0.219", features = ["derive"] }
pasetors = "0.6.8"
pin-project = "1.1.5"
futures = "0.3.31"
futures-util = "0.3.31"
serde_yaml = "0.9.30"
serde_json = "1.0.140"
json5 = "0.4.1"
itertools = "0.12.0"
base64 = "0.22.0"
hex = "0.4"
oauth2 = "4.2.3"
include_dir = "0.7.3"
reqwest = { version = "0.11.26", default-features = false, features = [
  "rustls-tls",
  "stream",
  "json",
] }
async-compression = { version = "0.4.6", features = ["tokio", "zstd"] }
docker-compose-types = "0.7.0"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-journald = "0.3.0"
chrono = { version = "0.4.40", features = ["serde"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls-vendored"] }
tokio-serde = "0.9.0"
data-encoding = "2.4.0"
secrecy = "0.10.3"
sha2 = "0.10.8"
rand = "0.9.0"
strum = "0.27.1"
strum_macros = "0.27.1"
procfs = "0.17.0"
quinn = { version = "0.11", default-features = false, features = ["rustls", "runtime-tokio"] }
rcgen = "0.14.5"
base16ct = { version = "0.2.0", features = ["alloc"] }
axum = { version = "0.8.4", features = ["ws", "macros"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
axum-client-ip = "1.0.0"
bytes = "1.5.0"
hyper = { version = "1.2.0", features = ["server", "client", "http1", "http2"] }
hyper-util = { version = "0.1.2", features = [
  "tokio",
  "client-legacy",
  "server",
  "server-auto",
] }
http-body-util = "0.1.1"
kube = { version = "1.1.0", features = ["runtime"] }
k8s-openapi = { version = "0.25.0", features = ["latest"] }
tarpc = { version = "0.36.0", features = ["full"] }
rustls-webpki = "0.103.8"
rustls-pemfile = "2.1.0"
tokio-rustls = { version = "0.26.4", default-features = false, features = [
  "ring",
  "logging",
  "tls12",
] }
tokio-util = { version = "0.7.10", features = ["codec", "io", "compat"] }
tokio = { version = "1.36.0", features = ["full"] }
sqlx = { version = "0.8.6", default-features = false, features = [
  "sqlx-postgres",
] }
sea-orm = { version = "1.1.14", features = [
  "sqlx-postgres",
  "sqlx-sqlite",
  "runtime-tokio-rustls",
  "macros",
] }
sea-orm-migration = { version = "1.1.14", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
] }
sea-orm-cli = { version = "1.1.14", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
russh = { version = "0.53.0" }
lapdev-api = { path = "./crates/api" }
lapdev-api-hrpc = { path = "./crates/api-hrpc" }
lapdev-cli = { path = "./crates/cli" }
lapdev-ws = { path = "./crates/ws" }
lapdev-db = { path = "./crates/db" }
lapdev-db-entities = { path = "./crates/db/entities" }
lapdev-db-migration = { path = "./crates/db/migration" }
lapdev-rpc = { path = "./crates/rpc" }
lapdev-conductor = { path = "./crates/conductor" }
lapdev-proxy-ssh = { path = "./crates/proxy-ssh" }
lapdev-proxy-http = { path = "./crates/proxy-http" }
lapdev-common = { path = "./crates/common" }
lapdev-enterprise = { path = "./crates/enterprise" }
lapdev-guest-agent = { path = "./crates/guest-agent" }
lapdev-kube = { path = "./crates/kube" }
lapdev-kube-rpc = { path = "./crates/kube-rpc" }
lapdev-kube-manager = { path = "./crates/kube-manager" }
lapdev-kube-sidecar-proxy = { path = "./crates/kube-sidecar-proxy" }
lapdev-devbox-rpc = { path = "./crates/devbox-rpc" }
lapdev-hrpc = { path = "./crates/hrpc" }
lapdev-hrpc-proc-macro = { path = "./crates/hrpc-proc-macro" }
lapdev-tunnel = { path = "./crates/tunnel" }

[package.metadata.deb]
depends = "$auto, passwd"
maintainer-scripts = "pkg/deb/"
systemd-units = { unit-name = "lapdev", enable = false }
assets = [
  [
    "target/release/lapdev",
    "/usr/bin/lapdev",
    "755",
  ],
  [
    "pkg/common/lapdev.service.preset",
    "/lib/systemd/system-preset/50-lapdev.preset",
    "644",
  ],
]

[package.metadata.generate-rpm]
post_install_script = "pkg/rpm/lapdev.postinst"
post_uninstall_script = "pkg/rpm/lapdev.postuninst"
assets = [
  { source = "target/release/lapdev", dest = "/usr/bin/lapdev", mode = "755" },
  { source = "pkg/deb/lapdev.service", dest = "/lib/systemd/system/lapdev.service", mode = "644" },
  { source = "pkg/common/lapdev.service.preset", dest = "/lib/systemd/system-preset/50-lapdev.preset", mode = "644" },
]
