[package]
name = "lapdev-dashboard"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
gloo-net = "0.5.0"
wasm-bindgen = "0.2.88"
web-sys = "0.3.65"
urlencoding = "2.1.3"
leptos = { version = "0.6.5", features = ["csr"] }
leptos_router = { version = "0.6.5", features = ["csr"] }
chrono.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
futures.workspace = true
lapdev-common.workspace = true
