[package]
name = "lapdev-api"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
regex.workspace = true
tarpc.workspace = true
itertools.workspace = true
rustls-webpki.workspace = true
include_dir.workspace = true
toml.workspace = true
clap.workspace = true
rustls-pemfile.workspace = true
tokio-rustls.workspace = true
tokio-util.workspace = true
reqwest.workspace = true
oauth2.workspace = true
chrono.workspace = true
pasetors.workspace = true
git2.workspace = true
russh.workspace = true
axum.workspace = true
axum-extra.workspace = true
axum-client-ip.workspace = true
bytes.workspace = true
hyper.workspace = true
hyper-util.workspace = true
tower.workspace = true
tower-http.workspace = true
anyhow.workspace = true
tokio.workspace = true
tokio-stream = { version = "0.1.15", features = ["sync"] }
futures.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
secrecy.workspace = true
sqlx.workspace = true
sea-orm.workspace = true
lapdev-rpc.workspace = true
lapdev-kube-rpc.workspace = true
lapdev-devbox-rpc.workspace = true
lapdev-common.workspace = true
k8s-openapi.workspace = true
lapdev-api-hrpc.workspace = true
lapdev-db.workspace = true
lapdev-db-entities.workspace = true
lapdev-enterprise.workspace = true
lapdev-conductor.workspace = true
lapdev-proxy-ssh.workspace = true
lapdev-proxy-http.workspace = true
lapdev-kube.workspace = true
lapdev-tunnel.workspace = true
pin-project.workspace = true
