[package]
name = "lapdev-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Lapdev CLI - Command line interface for Lapdev"

[[bin]]
name = "lapdev-cli"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
clap = { workspace = true, features = ["env"] }
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio = { workspace = true, features = ["net", "signal", "io-util", "fs"] }
tracing.workspace = true
tracing-subscriber.workspace = true
tokio-tungstenite.workspace = true
tarpc.workspace = true
lapdev-devbox-rpc.workspace = true
lapdev-rpc.workspace = true
futures.workspace = true
lapdev-tunnel.workspace = true
lapdev-common.workspace = true
quinn.workspace = true

# CLI-specific dependencies
keyring = { version = "3.6.1", features = ["apple-native", "windows-native", "linux-native"] }
webbrowser = "1.0.2"
colored = "2.1.0"
hostname = "0.4.0"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.5"
http = "1.1"
urlencoding = "2.1.3"
tempfile.workspace = true
windows-sys = { version = "0.59.0", features = ["Win32_Storage_FileSystem"] }
tracing-appender.workspace = true
dirs = "6.0.0"
