[package]
name = "lapdev-kube"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
pem = "3.0.5"
yup-oauth2 = "12.1.0"
httparse = "1.8"
uuid.workspace = true
base64.workspace = true
anyhow.workspace = true
reqwest.workspace = true
chrono.workspace = true
thiserror.workspace = true
sea-orm.workspace = true
serde_json.workspace = true
serde.workspace = true
lapdev-rpc.workspace = true
lapdev-kube-rpc.workspace = true
lapdev-common.workspace = true
lapdev-db.workspace = true
tracing.workspace = true
kube.workspace = true
k8s-openapi.workspace = true
tarpc.workspace = true
tokio.workspace = true
futures.workspace = true
axum.workspace = true
tokio-tungstenite.workspace = true
lapdev-tunnel.workspace = true
