[package]
name = "lapdev-proxy-http"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
hyper.workspace = true
anyhow.workspace = true
futures.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
lapdev-db.workspace = true
lapdev-db-entities.workspace = true
