[package]
name = "lapdev-proxy-ssh"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
data-encoding.workspace = true
russh.workspace = true
async-trait.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio.workspace = true
anyhow.workspace = true
sea-orm.workspace = true
lapdev-common.workspace = true
lapdev-db.workspace = true
lapdev-db-entities.workspace = true
lapdev-conductor.workspace = true
