[package]
name = "lapdev-db-migration"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
sea-orm-cli.workspace = true
sea-orm-migration.workspace = true
uuid.workspace = true
lapdev-db-entities.workspace = true
lapdev-common.workspace = true
